sandbox/output
StockProfit.cpp:50:52: error: expected ';' after expression
            i > 1 ? maxProfitsAfterBuy_[i - 1] : 0)
                                                   ^
                                                   ;
1 error generated.
make: *** [test] Error 1
